--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
             <li class="header-media-item">
                 <a href="/" class="header-link"></a>
                 <svg class="header-svg">
-                <use href="./img/img-2/symbol-defs.svg#icon-email-2" class="header-svg-use">
+                <use href="./img/img-2/symbol-defs.svg#icon-email-2">
                 </use>
                 </svg>
                 <a class="header-contact" href="info@devstudio.com">info@devstudio.com</a>
@@ -44,7 +44,7 @@
             <li class="header-media-item">
               <a href="/" class="header-link"></a>
               <svg class="header-svg">
-              <use href="./img/img-2/symbol-defs.svg#icon-telephone" class="header-svg-use">
+              <use href="./img/img-2/symbol-defs.svg#icon-telephone">
               </use>
               </svg>
               <a class="header-contact" href="+38 096 111 11 11">+38 096 111 11 11</a>
@@ -71,21 +71,21 @@
               <label class="back-drop-info">Ім'я</label>
               <input class="back-drop-fill" required type="text">
               <svg class="back-drop-svg-fill">
-                <use class="back-drop-use" href="./img/img-2/symbol-defs.svg#icon-person-black"></use>
+                <use href="./img/img-2/symbol-defs.svg#icon-person-black"></use>
               </svg>
             </div>
             <div class="back-drop-input">
               <label class="back-drop-info">Телефон</label>
               <input type="text" required class="back-drop-fill">
               <svg class="back-drop-svg-fill">
-                <use class="back-drop-use" href="./img/img-2/symbol-defs.svg#icon-phone-black"></use>
+                <use href="./img/img-2/symbol-defs.svg#icon-phone-black"></use>
               </svg>
             </div>
             <div class="back-drop-input">
               <label class="back-drop-info">Пошта</label>
               <input type="text" required class="back-drop-fill">
               <svg class="back-drop-svg-fill">
-                <use class="back-drop-use" href="./img/img-2/symbol-defs.svg#icon-email-black"></use>
+                <use href="./img/img-2/symbol-defs.svg#icon-email-black"></use>
               </svg>
             </div>
             <label class="back-drop-info" for="">Коментар</label>
@@ -191,7 +191,7 @@
                 <li class="team-svg-item">
                   <a href="/" class="team-link">
                     <svg class="team-svg">
-                    <use href="./img/img-2/symbol-defs.svg#icon-instagram" class="team-svg-use">
+                    <use href="./img/img-2/symbol-defs.svg#icon-instagram">
                     </use>
                     </svg>
                   </a>
@@ -199,7 +199,7 @@
                 <li class="team-svg-item">
                   <a href="/" class="team-link">
                     <svg class="team-svg">
-                    <use href="./img/img-2/symbol-defs.svg#icon-twitter" class="team-svg-use">
+                    <use href="./img/img-2/symbol-defs.svg#icon-twitter">
                     </use>
                     </svg>
                   </a>
@@ -207,7 +207,7 @@
                 <li class="team-svg-item">
                   <a href="/" class="team-link">
                     <svg class="team-svg">
-                      <use href="./img/img-2/symbol-defs.svg#icon-facebook" class="team-svg-use">
+                      <use href="./img/img-2/symbol-defs.svg#icon-facebook">
                       </use>
                       </svg>
                   </a>
@@ -215,7 +215,7 @@
                 <li class="team-svg-item">
                   <a href="/" class="team-link">
                     <svg class="team-svg">
-                    <use href="./img/img-2/symbol-defs.svg#icon-linkedin" class="team-svg-use">
+                    <use href="./img/img-2/symbol-defs.svg#icon-linkedin">
                     </use>
                     </svg>
                   </a>
@@ -235,7 +235,7 @@
                 <li class="team-svg-item">
                   <a href="/" class="team-link">
                     <svg class="team-svg">
-                    <use href="./img/img-2/symbol-defs.svg#icon-instagram" class="team-svg-use">
+                    <use href="./img/img-2/symbol-defs.svg#icon-instagram">
                     </use>
                     </svg>
                   </a>
@@ -243,7 +243,7 @@
                 <li class="team-svg-item">
                   <a href="/" class="team-link">
                     <svg class="team-svg">
-                    <use href="./img/img-2/symbol-defs.svg#icon-twitter" class="team-svg-use">
+                    <use href="./img/img-2/symbol-defs.svg#icon-twitter">
                     </use>
                     </svg>
                   </a>
@@ -251,7 +251,7 @@
                 <li class="team-svg-item">
                   <a href="/" class="team-link">
                     <svg class="team-svg">
-                    <use href="./img/img-2/symbol-defs.svg#icon-facebook" class="team-svg-use">
+                    <use href="./img/img-2/symbol-defs.svg#icon-facebook">
                     </use>
                     </svg>
                   </a>
@@ -259,7 +259,7 @@
                 <li class="team-svg-item">
                   <a href="/" class="team-link">
                     <svg class="team-svg">
-                    <use href="./img/img-2/symbol-defs.svg#icon-linkedin" class="team-svg-use">
+                    <use href="./img/img-2/symbol-defs.svg#icon-linkedin">
                     </use>
                     </svg>
                   </a>
@@ -279,7 +279,7 @@
                   <li class="team-svg-item">
                     <a href="/" class="team-link">
                       <svg class="team-svg">
-                      <use href="./img/img-2/symbol-defs.svg#icon-instagram" class="team-svg-use">
+                      <use href="./img/img-2/symbol-defs.svg#icon-instagram">
                       </use>
                       </svg>
                     </a>
@@ -287,7 +287,7 @@
                   <li class="team-svg-item">
                     <a href="/" class="team-link">
                       <svg class="team-svg">
-                      <use href="./img/img-2/symbol-defs.svg#icon-twitter" class="team-svg-use">
+                      <use href="./img/img-2/symbol-defs.svg#icon-twitter">
                       </use>
                       </svg>
                     </a>
@@ -295,7 +295,7 @@
                   <li class="team-svg-item">
                     <a href="/" class="team-link">
                       <svg class="team-svg">
-                        <use href="./img/img-2/symbol-defs.svg#icon-facebook" class="team-svg-use">
+                        <use href="./img/img-2/symbol-defs.svg#icon-facebook">
                         </use>
                         </svg>
                     </a>
@@ -303,7 +303,7 @@
                   <li class="team-svg-item">
                     <a href="/" class="team-link">
                       <svg class="team-svg">
-                      <use href="./img/img-2/symbol-defs.svg#icon-linkedin" class="team-svg-use">
+                      <use href="./img/img-2/symbol-defs.svg#icon-linkedin">
                       </use>
                       </svg>
                     </a>
@@ -323,7 +323,7 @@
                 <li class="team-svg-item">
                   <a href="/" class="team-link">
                     <svg class="team-svg">
-                    <use href="./img/img-2/symbol-defs.svg#icon-instagram" class="team-svg-use">
+                    <use href="./img/img-2/symbol-defs.svg#icon-instagram">
                     </use>
                     </svg>
                   </a>
@@ -331,7 +331,7 @@
                 <li class="team-svg-item">
                   <a href="/" class="team-link">
                     <svg class="team-svg">
-                    <use href="./img/img-2/symbol-defs.svg#icon-twitter" class="team-svg-use">
+                    <use href="./img/img-2/symbol-defs.svg#icon-twitter">
                     </use>
                     </svg>
                   </a>
@@ -339,7 +339,7 @@
                 <li class="team-svg-item">
                   <a href="/" class="team-link">
                     <svg class="team-svg">
-                      <use href="./img/img-2/symbol-defs.svg#icon-facebook" class="team-svg-use">
+                      <use href="./img/img-2/symbol-defs.svg#icon-facebook">
                       </use>
                       </svg>
                   </a>
@@ -347,7 +347,7 @@
                 <li class="team-svg-item">
                   <a href="/" class="team-link">
                     <svg class="team-svg">
-                    <use href="./img/img-2/symbol-defs.svg#icon-linkedin" class="team-svg-use">
+                    <use href="./img/img-2/symbol-defs.svg#icon-linkedin">
                     </use>
                     </svg>
                   </a>
@@ -363,42 +363,42 @@
                 <li class="client-item">
                     <a href="/" class="client-link">
                         <svg class="client-svg">
-                        <use href="./img/img-2/symbol-defs.svg#icon-client-1" class="client-svg-use"></use>
+                        <use href="./img/img-2/symbol-defs.svg#icon-client-1"></use>
                         </svg>
                     </a>
                 </li>
                 <li class="client-item">
                     <a href="/" class="client-link">
                         <svg class="client-svg">
-                        <use href="./img/img-2/symbol-defs.svg#icon-client-2" class="client-svg-use"></use>
+                        <use href="./img/img-2/symbol-defs.svg#icon-client-2"></use>
                         </svg>
                     </a>
                 </li>
                 <li class="client-item">
                     <a href="/" class="client-link">
                         <svg class="client-svg">
-                        <use href="./img/img-2/symbol-defs.svg#icon-client-3" class="client-svg-use"></use>
+                        <use href="./img/img-2/symbol-defs.svg#icon-client-3"></use>
                         </svg>
                     </a>
                 </li>
                 <li class="client-item">
                     <a href="/" class="client-link">
                         <svg class="client-svg">
-                        <use href="./img/img-2/symbol-defs.svg#icon-client-4" class="client-svg-use"></use>
+                        <use href="./img/img-2/symbol-defs.svg#icon-client-4"></use>
                         </svg>
                     </a>
                 </li>
                 <li class="client-item">
                     <a href="/" class="client-link">
                         <svg class="client-svg">
-                        <use href="./img/img-2/symbol-defs.svg#icon-client-5" class="client-svg-use"></use>
+                        <use href="./img/img-2/symbol-defs.svg#icon-client-5"></use>
                         </svg>
                     </a>
                 </li>
                 <li class="client-item">
                     <a href="/" class="client-link">
                         <svg class="client-svg">
-                        <use href="./img/img-2/symbol-defs.svg#icon-client-6" class="client-svg-use"></use>
+                        <use href="./img/img-2/symbol-defs.svg#icon-client-6"></use>
                         </svg>
                     </a>
                 </li>
@@ -423,7 +423,7 @@
                 </li>
               </ul>
           </div>
-          <div>
+          <div class="footer-social">
             <h3 class="footer-title">ПРИЄДНУЙТЕСЬ</h3>
             <ul class="footer-svg-list">
               <li class="footer-svg-item">
