--- a/portfolio.html
+++ b/portfolio.html
@@ -261,7 +261,7 @@
                 </li>
               </ul>
           </div>
-          <div>
+          <div class="footer-social">
             <h3 class="footer-title">ПРИЄДНУЙТЕСЬ</h3>
             <ul class="footer-svg-list">
               <li class="footer-svg-item">
