fix portfolio buttons and footer

--- a/portfolio.html
+++ b/portfolio.html
@@ -261,13 +261,13 @@
                 </li>
               </ul>
           </div>
-          <div>
+          <div class="footer-social">
             <h3 class="footer-title">ПРИЄДНУЙТЕСЬ</h3>
             <ul class="footer-svg-list">
               <li class="footer-svg-item">
                 <a href="/" class="footer-link">
                   <svg class="footer-svg">
-                  <use href="./img/img-2/symbol-defs.svg#icon-instagram" class="footer-svg-use">
+                  <use href="./img/img-2/symbol-defs.svg#icon-instagram">
                   </use>
                   </svg>
                 </a>
@@ -275,7 +275,7 @@
               <li class="footer-svg-item">
                 <a href="/" class="footer-link">
                   <svg class="footer-svg">
-                  <use href="./img/img-2/symbol-defs.svg#icon-twitter" class="footer-svg-use">
+                  <use href="./img/img-2/symbol-defs.svg#icon-twitter">
                   </use>
                   </svg>
                 </a>
@@ -283,7 +283,7 @@
               <li class="footer-svg-item">
                 <a href="/" class="team-link">
                   <svg class="footer-svg">
-                    <use href="./img/img-2/symbol-defs.svg#icon-facebook" class="footer-svg-use">
+                    <use href="./img/img-2/symbol-defs.svg#icon-facebook">
                     </use>
                     </svg>
                 </a>
@@ -291,7 +291,7 @@
               <li class="footer-svg-item">
                 <a href="/" class="footer-link">
                   <svg class="footer-svg">
-                  <use href="./img/img-2/symbol-defs.svg#icon-linkedin" class="footer-svg-use">
+                  <use href="./img/img-2/symbol-defs.svg#icon-linkedin">
                   </use>
                   </svg>
                 </a>
