--- a/index.html
+++ b/index.html
@@ -423,7 +423,7 @@
                 </li>
               </ul>
           </div>
-          <div>
+          <div class="footer-social">
             <h3 class="footer-title">ПРИЄДНУЙТЕСЬ</h3>
             <ul class="footer-svg-list">
               <li class="footer-svg-item">
