sass main and portfolio

--- a/portfolio.html
+++ b/portfolio.html
@@ -14,7 +14,7 @@
     <link rel="stylesheet" href="./sass/portfolio.css"/>
   </head>
   <body>
-    <header class="header">
+    <header class="header header-line">
       <section class="header__section">
         <div class="container">
           <a href="/" class="header-section__web"
@@ -25,7 +25,7 @@
               <a class="header-list__link" href="./index.html">Студія</a>
             </li>
             <li class="header-list__item">
-              <a class="header-list__links" href="./portfolio.html">Портфоліо</a>
+              <a class="header-list__link header-active" href="./portfolio.html">Портфоліо</a>
             </li>
             <li class="header-list__item">
               <a class="header-list__link" href="/">Контакти</a>
