hero section, modal + qualities section adaptive

--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>WebStudio</title>
     <link
       href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap"
@@ -16,7 +16,7 @@
     <link rel="stylesheet" href="./sass/main.css"/>
   </head>
   <body>
-    <header class="header">
+    <!-- <header class="header">
       <section class="header__section">
         <div class="container">
           <a href="/" class="header-section__web"
@@ -55,7 +55,7 @@
           </ul>
         </div>
       </section>
-    </header>
+    </header> -->
     <main class="main-section">
       <section class="hero-section">
         <div class="container">
@@ -153,7 +153,7 @@
           </ul>
         </div>
       </section>
-      <section class="work-section">
+      <!-- <section class="work-section">
         <div class="container">
           <h2 class="work-section__title">Чим ми займаємося</h2>
           <ul class="work-list">
@@ -189,8 +189,8 @@
             </li>
           </ul>
         </div>
-      </section>
-      <section class="team-section">
+      </section> -->
+      <!-- <section class="team-section">
         <div class="container">
           <h2 class="team-section__title">Наша комманда</h2>
           <ul class="team-list">
@@ -392,8 +392,8 @@
             </li>
           </ul>
         </div>
-      </section>
-      <section class="client-section">
+      </section> -->
+      <!-- <section class="client-section">
         <div class="container">
           <h2 class="client-section__title">Постійні клієнти</h2>
           <ul class="client-list">
@@ -441,9 +441,9 @@
             </li>
           </ul>
         </div>
-      </section>
+      </section> -->
     </main>
-    <footer class="footer">
+    <!-- <footer class="footer">
       <section class="footer-section">
         <div class="container">
           <div class="footer-info">
@@ -520,7 +520,7 @@
           </div>
         </div>
       </section>
-    </footer>
+    </footer> -->
     <script>
       const refs = {
         openModalBtn: document.querySelector("[data-open-modal]"),
