--- a/index.html
+++ b/index.html
@@ -153,7 +153,7 @@
           </ul>
         </div>
       </section>
-      <!-- <section class="work-section">
+      <section class="work-section">
         <div class="container">
           <h2 class="work-section__title">Чим ми займаємося</h2>
           <ul class="work-list">
@@ -189,8 +189,8 @@
             </li>
           </ul>
         </div>
-      </section> -->
-      <!-- <section class="team-section">
+      </section>
+      <section class="team-section">
         <div class="container">
           <h2 class="team-section__title">Наша комманда</h2>
           <ul class="team-list">
@@ -392,8 +392,8 @@
             </li>
           </ul>
         </div>
-      </section> -->
-      <!-- <section class="client-section">
+      </section>
+      <section class="client-section">
         <div class="container">
           <h2 class="client-section__title">Постійні клієнти</h2>
           <ul class="client-list">
@@ -441,7 +441,7 @@
             </li>
           </ul>
         </div>
-      </section> -->
+      </section>
     </main>
     <!-- <footer class="footer">
       <section class="footer-section">
