--- a/index.html
+++ b/index.html
@@ -443,7 +443,7 @@
         </div>
       </section>
     </main>
-    <!-- <footer class="footer">
+    <footer class="footer">
       <section class="footer-section">
         <div class="container">
           <div class="footer-info">
@@ -520,7 +520,7 @@
           </div>
         </div>
       </section>
-    </footer> -->
+    </footer>
     <script>
       const refs = {
         openModalBtn: document.querySelector("[data-open-modal]"),
