--- a/portfolio.html
+++ b/portfolio.html
@@ -61,7 +61,7 @@
             <li class="buttons-list__item">
               <button type="button" class="buttons-list__items">Усе</button>
             </li>
-            <li class="buttons_list-item">
+            <li class="buttons-list__item">
               <button type="button" class="buttons-list__items">
                 Веб-сайти
               </button>
