--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <link rel="stylesheet" href="./sass/main.css"/>
   </head>
   <body>
-    <!-- <header class="header">
+    <header class="header">
       <section class="header__section">
         <div class="container">
           <a href="/" class="header-section__web"
@@ -55,7 +55,7 @@
           </ul>
         </div>
       </section>
-    </header> -->
+    </header>
     <main class="main-section">
       <section class="hero-section">
         <div class="container">
