--- a/portfolio.html
+++ b/portfolio.html
@@ -14,7 +14,7 @@
     <link rel="stylesheet" href="./sass/portfolio.css"/>
   </head>
   <body>
-    <!-- <header class="header header-line">
+    <header class="header header-line"
       <section class="header__section">
         <div class="container">
           <a href="/" class="header-section__web"
@@ -53,7 +53,7 @@
           </ul>
         </div>
       </section>
-    </header> -->
+    </header>
     <main class="main-section">
       <section class="buttons-section">
         <div class="container">
