--- a/index.html
+++ b/index.html
@@ -19,9 +19,9 @@
     <header class="header">
       <section class="header__section">
         <div class="container">
-          <a href="/" class="header-section__web"
-            >Web<span class="header-section__logo">Studio</span></a
-          >
+          <a href="/" class="header-section__web">Web
+            <span class="header-section__logo">Studio</span>
+          </a>
           <ul class="header-list">
             <li class="header-list__item">
               <a class="header-list__link header-list__bar" href="./index.html">Студія</a>
