--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
   </head>
   <body>
     <header class="header">
-      <section class="header__section">
+      <section class="header-section">
         <div class="container">
           <a href="/" class="header-section__web"
             >Web<span class="header-section__logo">Studio</span>
