--- a/portfolio.html
+++ b/portfolio.html
@@ -51,9 +51,7 @@
               <svg class="header-media__icon">
                 <use href="./img/img-2/symbol-defs.svg#icon-telephone"></use>
               </svg>
-              <a class="header-media__contact" href="+38 096 111 11 11"
-                >+38 096 111 11 11</a
-              >
+              <a class="header-media__contact" href="+380961111111">+38 096 111 11 11</a>
             </li>
           </ul>
         </div>
